﻿Version 4.3.0
MVC 6
- Get the environment in gulpfile.js by reading the launchSettings.json file if an environment variable does not exist.

Version 4.2.1
MVC 6
- Renamed the template in the File -> New Project window.

Version 4.2.0
MVC 6
- Updated NWebSec to the latest ASP.NET Core 1.0 Version.
- AddApplicationInsights in Startup.ConfigureServices now added fluently as it now returns IServiceCollection.

Version 4.1.0
MVC 6
- Fixed https://github.com/RehanSaeed/ASP.NET-MVC-Boilerplate/issues/108

Version 4.0.0
MVC 6
- Updated to ASP.NET Core 1.0 RTM.

Version 3.2.0
MVC 5 & 6
- Removed the X-UA-Compatible HTTP header from web.config.
MVC 6
- Development mode now uses HTTPS if HTTPS everywhere is enabled. In development mode a SSL port is used and needs to
  be set in the MVC options and in the Content-Security-Policy settings.
- Major refactoring of Startup.cs making all method calls fluent.
- CSP now configured using NWebSec middleware instead of NWebSec filters.
- Anti-forgery tokens use the X-XSRF-TOKEN HTTP header name.
- EnvironmentName.cs constant removed as the built in RC2 one with the same name now has a Staging constant in it which
  was missing.
- ReadMe.html updated to change comment about installing the HttpPlatformHandler and installing the IIS .NET Core
  Windows Server Hosting Bundle instead.
- Removed comments about IgnoreRoute missing from MVC 6.
- Added the autostrip-json-comments NPM package to package.json and require statement to gulpfile.js to allow comments
  in config.json and hosting.json.

Version 3.1.1
MVC 6
- Fixed https://github.com/RehanSaeed/ASP.NET-MVC-Boilerplate/issues/104

Version 3.1.0
MVC 6
- Enable UseRandomizedStringHashAlgorithm for .NET Framework 4.6.1 in web.config.
- Dont need the 404 middleware in RC2, so it has been removed from the end of the pipeline in Startup.cs.

Version 3.0.0
MVC 5
- Took my name out of the AssemblyCopyright attribute in AssemblyInfo.cs and left it blank for users to fill in.
MVC 6