@@ -87,6 +87,7 @@
     <Compile Include="Features\Other\SearchFeature.cs" />
     <Compile Include="Features\Pages\AboutPageFeature.cs" />
     <Compile Include="Features\Pages\ContactPageFeature.cs" />
+    <Compile Include="Features\Performance\GooglePageSpeedFeature.cs" />
     <Compile Include="Features\Performance\CshtmlMinificationFeature.cs" />
     <Compile Include="Features\Project\TargetFrameworkFeature.cs" />
     <Compile Include="Features\Rest\SwaggerFeature.cs" />
@@ -184,6 +185,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Google Page Speed.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
