@@ -1,6 +1,7 @@
 ﻿Version 4.3.0
 MVC 6
 - Get the environment in gulpfile.js by reading the launchSettings.json file if an environment variable does not exist.
+- Google Page Speed is now an optional feature under performance.
 
 Version 4.2.1
 MVC 6
